tests/bad/testProcSyntaxError.grc
// Missing opening brace
proc missingBrace() 
    print("This shouldn't compile")
}

// Valid proc for reference
proc valid(): void {
    print("This is valid")
}
